--- a/conf/imc_pipeline.yaml
+++ b/conf/imc_pipeline.yaml
@@ -1,15 +1,19 @@
-# Version of the configuration file
-version: 1
+# i/o-related: image/catalog file types
+imgFormat : '.tiff'
+imgFormatOut : '.jpg'
+catFormat : '.fits'
+imgPath : 'DATA03__Dimitra_IMC_data' # 'test_image_IMC' 'DATA02__3D_stpt_IMC' #'DATA01__bodenmiller_data'
 
-# Name of the pipeline
-name: imc
+# i/o-related: output folder/sub-folders
+output_key: "/output/" 
+output_key_ref: "/reference/"
+output_key_mask: "/mask/"
+output_key_cat: "/catalog/"
 
-# Pipeline arguments
-datalen: 100
+# processing-related
+n_workers_param: 20
+memory_limit_param: '10GB'
 
-# Resources requested
-resources:
-  threads: 24
-  workers: 1
-  memory: 2G
-
+# segmentation-related parameters (IMC 25 and 10)
+ref_channel: 37         
+normalized_factor: 10 
