--- a/setup.cfg
+++ b/setup.cfg
@@ -23,7 +23,7 @@ universal = 1
 max-line-length = 80
 select = C,E,F,W,B,B950
 exclude = docs,build,.git,__pycache__
-ignore = E252, E501, W503, W504, B950
+ignore = E252, E501, W503, W504, B950, E203
 max-complexity = 10
 
 [aliases]
