--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,12 +4,14 @@ stages:
 
 test:
   stage: test
+  image: imaxt/jimaxt:latest
   tags:
     - python
   script:
     - pip config set global.extra-index-url $EXTRA_INDEX_URL
     - pip config set global.trusted-host $TRUSTED_HOST
     - pip install --user -r requirements_dev.txt
+    - pip install --user imaxt-image
     - python setup.py develop --user
     - python setup.py flake8
     - python setup.py build_sphinx -W
@@ -17,6 +19,7 @@ test:
 
 deploy:
   stage: deploy
+  image: imaxt/jimaxt:latest
   tags:
     - python
   only:
@@ -27,6 +30,7 @@ deploy:
     - pip config set global.extra-index-url $EXTRA_INDEX_URL
     - pip config set global.trusted-host $TRUSTED_HOST
     - pip install --user -r requirements_dev.txt
+    - pip install --user imaxt-image
     - python setup.py sdist
     - curl -X MKCOL $REPO/imc_pipeline
     - curl -XPUT $REPO/imc_pipeline/imc_pipeline-0.1.0.tar.gz --data-binary @dist/imc_pipeline-0.1.0.tar.gz
