--- a/conf/imc_pipeline.yaml
+++ b/conf/imc_pipeline.yaml
@@ -20,10 +20,13 @@ extra_pip_packages: imc-pipeline
 #output_path: /home/darius01/myDisk1/myProjects/medical/imaxt/imc/OUTPUT_OME_multi
 
 # zarr TEST (ref 43 for all)
-input_path: /Users/eglez/data/imaxt/imc/STPT1_Axio4_20200508-143701-685025
+
 #input_path: '/home/darius01/myDisk1/myProjects/medical/imaxt/imc/imc-data/imc_zarr/STPT2_Axio10_20200424-145300-100633.zarr'
 #input_path: '/home/darius01/myDisk1/myProjects/medical/imaxt/imc/imc-data/imc_zarr/STPT3_Axio11_20200419-154014-748612.zarr'
-output_path: /Users/eglez/data/imaxt/imc/output
+
+# zarr2 TEST
+input_path: '/home/darius01/myDisk1/myProjects/medical/imaxt/imc/imc-data/imc_zarr2/STPT4_Axio18_20200415-152904-430589.zarr'
+output_path: /home/darius01/myDisk1/myProjects/medical/imaxt/imc/imc_zarr2_server_version
 
 # flux-estimation (mean pixel intensities) related parameters
 n_buff: 1
@@ -34,9 +37,9 @@ segmentation:
   ref_channel: 43 # nuclear channel to be used for segmentation
   min_distance: 3 # watershed segmentation
   gb_ksize: 0 # gaussian blur kernel size (for denoising)
-  gb_sigma: 2.0 # gaussian blur sigma (for denoising)
-  adapThresh_blockSize: 25 # kernel size for background removal
-  adapThresh_constant: -6.5 # pixel intensity constant for background removal
+  gb_sigma: 2.1 # gaussian blur sigma (for denoising)
+  adapThresh_blockSize: 17 # kernel size for background removal
+  adapThresh_constant: -4.9 # pixel intensity constant for background removal
   ain_automatic_image_normalization: True # automatically enhances the contrast of the input reference channel. If set to 'False', then the pipeline looks at the 'ain_image_normalization_factor' for image enhancement.
   ain_image_normalization_factor: 1 # normalization factor [1,..., 50]. A value of '1' means no change in image contrast. Larger values, increase image contrast.
   aic_apply_intensity_correction: False
