--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,7 +19,7 @@ test:
 
 deploy:
   stage: deploy
-  image: imaxt/casu-notebook:latest
+  image: imaxt/owl-pipeline:latest
   tags:
     - python
   only:
@@ -33,6 +33,6 @@ deploy:
     - pip install --user imaxt-image
     - python setup.py sdist
     - curl -X MKCOL $REPO/imc-pipeline
-    - curl -XPUT $REPO/imc-pipeline/imc-pipeline-0.10.2.tar.gz --data-binary @dist/imc-pipeline-0.10.2.tar.gz
+    - curl -XPUT $REPO/imc-pipeline/imc-pipeline-0.10.3.tar.gz --data-binary @dist/imc-pipeline-0.10.3.tar.gz
 
 
