--- a/setup.cfg
+++ b/setup.cfg
@@ -4,12 +4,12 @@ commit = True
 tag = True
 
 [bumpversion:file:setup.py]
-search = version='{current_version}'
-replace = version='{new_version}'
+search = version="{current_version}"
+replace = version="{new_version}"
 
 [bumpversion:file:imc_pipeline/__init__.py]
-search = __version__ = '{current_version}'
-replace = __version__ = '{new_version}'
+search = __version__ = "{current_version}"
+replace = __version__ = "{new_version}"
 
 [bumpversion:file:.gitlab-ci.yml]
 search = {current_version}.tar.gz
@@ -29,7 +29,7 @@ max-complexity = 10
 test = pytest
 
 [tool:pytest]
-collect_ignore = ['setup.py']
+collect_ignore = ["setup.py"]
 addopts = --cov=imc_pipeline --cov-report=html --cov-report=term
 
 [build_sphinx]
