--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,6 +33,6 @@ deploy:
     - pip install --user imaxt-image
     - python setup.py sdist
     - curl -X MKCOL $REPO/imc-pipeline
-    - curl -XPUT $REPO/imc-pipeline/imc-pipeline-0.11.2.tar.gz.tar.gz --data-binary @dist/imc-pipeline-0.11.2.tar.gz.tar.gz
+    - curl -XPUT $REPO/imc-pipeline/imc-pipeline-0.11.2.tar.gz --data-binary @dist/imc-pipeline-0.11.2.tar.gz
 
 
